--- a/style.css
+++ b/style.css
@@ -1,25 +1,37 @@
 body{
     padding: 0%;
     margin: 0%;
-    background-color: #d9ecd0;
+    background-color: #d0d0d0;
     font-family: Arial, Helvetica, sans-serif; 
 }
 h1{
-    padding: 20px;
+    padding: 35px;
     margin: 0%;
     text-align: center;
-}
-footer{
-    padding: 5px;
-    margin: 0;
-    text-align: center; 
-    background-color:#77a8a8;
+    background-image: url(image/heading1.jpg);
+    font-family: fangsong;
+    font-weight: 900;
 }
 header{
     background-color: #87bdd8;
     text-align: center;
-    color: green;
-    padding: 5px;
+    color: rgb(0, 4, 255);
+    padding: 0px;
+}
+.stiky {
+    background-color: #77a8a8;
+    overflow: hidden;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    
+}
+.stiky-2{
+    list-style-type: none;
+    margin: 0;
+    padding: 15px;
+    display: flex;
+    justify-content: center; 
 }
 .navitem{
     display: inline;
@@ -28,31 +40,13 @@ header{
 }
 .navitem a{
     text-decoration: none;
-    color: rgb(7, 32, 220);
+    color: rgb(14, 1, 1);
+   
 }
-iframe{
-    width: -webkit-fill-available;
-}
-/* contact us */
-.Contact {
-    padding: 0%;
-    margin: 0%;
-    text-align: center;
-    
-}
-/* donation */
-.donation{
-    padding: 0%;
-    margin: 0%;
-    text-align: center;
-    
-}
-/* Midia */
-.Midia{
-    padding: 0%;
-    margin: 0%;
-    text-align: center;
-    
+
+/* .Introduction .Midia .donation .Contact */
+h2{
+    text-decoration: underline;
 }
 
 /* Introduction */
@@ -60,13 +54,17 @@ iframe{
     padding: 0%;
     margin: 0%;
     text-align: center;
-    
-    
+    background-color: #d0d0d0;
 }
-/* .Introduction .Midia .donation .Contact */
-h2{
-    text-decoration: underline;
+
+/* Midia */
+.Midia{
+    padding: 0%;
+    margin: 0%;
+    text-align: center;
+    background-color: #d0d0d0;  
 }
+
 /* for image code arrangment */
 img{
     width: 150px;
@@ -75,6 +73,31 @@ img{
 /* donation decoration */
 .uldonation{
     text-align: left;
+
+}
+.oldonation{
+    padding: 1%;
+}
+/* donation */
+.donation{
+    padding: 0%;
+    margin: 0%;
+    text-align: center;
+    background-color: #d0d0d0;
+    
+}
+
+/* contact us */
+.Contact {
+    padding: 0%;
+    margin: 0%;
+    text-align: center;
+    background-color: #d0d0d0;
+    
+}
+
+iframe{
+    width: -webkit-fill-available;
 }
 
 /* feedback from by user request */
@@ -120,3 +143,10 @@ img{
 }
 
 /* compleate from request css code */
+
+footer{
+    padding: 5px;
+    margin: 0;
+    text-align: center; 
+    background-color:#77a8a8;
+}
