--- a/donation.css
+++ b/donation.css
@@ -46,6 +46,7 @@ footer{
     margin: 0;
     text-align: center; 
     background-color:#77a8a8;
+    font-size: 13px;
 }
 
    /* with aii procid  ///////////////////////////////////////////////////////////////*/
