--- a/style.css
+++ b/style.css
@@ -2,9 +2,11 @@
  .marquee-container {
     width: 100%;
     box-sizing: border-box;
-    background-color: #d0d0d0; /* Light blue background */
+    /* background-color: #cfe7f0;  */
+    margin: -16px;
     padding: 20px;
     overflow: hidden;
+    /* background-image: url(image/background3.webp); */
 }
 
 .marquee {
@@ -44,7 +46,7 @@
         transform: translateX(-100%);
     }
 }
-  /* new event add karna ho to ye update kare  */
+  /* new event add karna ho to ye update kare  or khatam */
 
 
 body{
@@ -52,6 +54,7 @@ body{
     margin: 0%;
     background-color: #d0d0d0;
     font-family: Arial, Helvetica, sans-serif; 
+    background-image: url(image/background3.webp);
 }
 h1{
     padding: 35px;
@@ -64,12 +67,12 @@ h1{
 header{
     background-color: #87bdd8;
     text-align: center;
-    color: darkblue;
+    color: #191970;
     padding: 0px;
     
 }
 .stiky {
-    background-color: #77a8a8;
+    background-color: #ADD8E6;
     overflow: hidden;
     position: sticky;
     top: 0;
@@ -96,11 +99,10 @@ header{
 
 /* button ka code likha gaya hai aap dekh sakte */
 .hbutton{
-    background-color: rgb(88, 168, 168);
-    color: #00ff0d;
+    background-color: #759495;
     border-radius: 20px;
     text-decoration: none;
-    border-color: yellow;
+    border-color: #E0FFFF;
     border-style: groove;
     height: 30px;
 }
@@ -116,6 +118,7 @@ header{
 /* .Introduction .Midia .donation .Contact */
 h2{
     text-decoration: underline;
+    text-decoration: underline dotted;
 }
 
 /* Introduction */
@@ -124,7 +127,7 @@ h2{
     margin: 0%;
     text-align: center;
     background-color: #d0d0d0;
-    /* background-image: url(/image/background3.jpg); */
+    background-image: url(image/background3.webp);
 }
 
 /* Midia */
@@ -143,6 +146,7 @@ h2{
     padding: 20px;
     box-sizing: border-box;
     text-align: center;
+    background-image: url(image/background3.webp);
 }
 
 .media-title {
@@ -258,7 +262,10 @@ h2{
         max-width: 90%;
     }
 }
-/* with the help of a ai to proced by a website media section */
+/* with the help of a ai to proced by a website media section khatam */
+
+
+
 /* for image code arrangment */
 img{
     width: 250px;
@@ -278,6 +285,7 @@ img{
     margin: 0%;
     text-align: center;
     background-color: #d0d0d0;
+    background-image: url(image/background3.webp);
     
 }
 
@@ -287,6 +295,7 @@ img{
     margin: 0%;
     text-align: center;
     background-color: #d0d0d0;
+    background-image: url(image/background3\ -\ Copy\ 2.jpg);
     
 }
 
@@ -298,6 +307,7 @@ iframe{
 .page-container {
     font-family: Arial, sans-serif;
     background-color: #d0d0d0;
+    background-image: url(image/background3\ -\ Copy.jpg);
     margin: 0;
     padding: 0;
     display: flex;
@@ -310,6 +320,7 @@ iframe{
     padding: 20px;
     border-radius: 5px;
     /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
+    background-image: url(image/background3\ -\ Copy.jpg);
     width: 300px;
 }
 .feedback-form h2 {
